sidebar fixed overflow scroll

--- a/src/components/admin/pages/main/main.scss
+++ b/src/components/admin/pages/main/main.scss
@@ -73,9 +73,10 @@ $font: "VelaSans";
 }
 
 .wrapper__sidebar {
-  width: 30%;
+  width: 423px;
   position: fixed;
-
+  height: 100%;
+  overflow: scroll;
 
   @media screen and(max-width: 786px) {
     display: none;
@@ -98,7 +99,7 @@ $font: "VelaSans";
 
 
 .wrapper__main {
-  width: 70%;
+  width: calc(100% - 423px);
   margin-left: auto;
   padding: 70px 40px 0 40px;
 
